Fixed bottom nav still trying to overlap with card.

--- a/src/components/Content.scss
+++ b/src/components/Content.scss
@@ -85,9 +85,9 @@
         transition: height 250ms $mdc-animation-standard-curve-timing-function;
         z-index: -1;
     }
-    &.card::before {
-        height: 256px - $mdc-top-app-bar-row-height;
-    }
+}
+:not(.bottomNav) + .main.card::before {
+    height: 256px - $mdc-top-app-bar-row-height;
 }
 
 .filter-drawer-open .main.card::before, .details-drawer-open .main.card::before {
@@ -111,7 +111,7 @@
     .main::before {
         top: $mdc-top-app-bar-mobile-row-height;
     }
-    .main.card::before {
+    :not(.bottomNav) + .main.card::before {
         height: 256px - $mdc-top-app-bar-mobile-row-height;
     }
 };
